# LEDAnimator

./: .gitignore  Doxyfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
PiSyncTest/: README.md  beacon.py  display.py  follower.py  gfx.py  leader.py  run-follower.sh  run-leader.sh  scanner.py  snap.py  st7796.py  touch.py
docs/: STATUS.md  app-update-plan.md  config-and-auth-plan.md  file-format.md  firmware-build.md  future-directions.md  getting-started.md  hardware-test-plan.md  led0-status.md  multi-device-sync.md  protocol.md  sync-beacon.md
firmware-rust/: .gitignore  Cargo.toml  README.md  build.rs  memory-rp2040.x  memory-rp2350.x  memory.x  test-pattern.leda
firmware-rust/.cargo/: config.toml
firmware-rust/docs/: PORT.md
firmware-rust/spike-coex/: Cargo.toml  memory.x
firmware-rust/spike-coex/src/: main.rs
firmware-rust/spike-graph/: Cargo.toml  STATUS.md  build.rs
firmware-rust/spike-graph/.cargo/: config.toml
firmware-rust/spike-graph/src/: main.rs
firmware-rust/src/: ble.rs  fs.rs  leda.rs  main.rs  panic.rs  protocol.rs  radio.rs  recovery.rs  state.rs  status.rs  usb.rs  wifi.rs  ws2812.rs
firmware-rust/src/board/: mod.rs  rp2040.rs  rp2350.rs
firmware-rust/tools/: ble_test.py
iOS/: .gitignore  README.md
iOS/LED Animator/LED Animator/: BLEController.swift  ContentView.swift  ControlView.swift  DeviceInfoView.swift  DeviceListView.swift  DeviceSession.swift  EditorPanels.swift  EditorView.swift  HomeView.swift  LEDProtocol.swift  LED_AnimatorApp.swift  PlatformModifiers.swift  TCPController.swift  Transport.swift  WhiteBalanceView.swift  WiFiDiscovery.swift  WiFiView.swift
iOS/LED Animator/LED Animator.xcodeproj/: project.pbxproj
iOS/LED Animator/LED Animator/AppIcon.icon/: icon.json
src/: App.css  App.tsx  arrangements.ts  bake.ts  color.ts  demo.ts  gradient.ts  presets.ts  project.ts  store.ts  types.ts  usePlayer.ts  viewportControls.ts  vite-env.d.ts
src/components/: ArrangementPanel.tsx  ExportDialog.tsx  GradientEditor.tsx  GradientPreview.tsx  Inspector.tsx  LedList.tsx  Leds.tsx  PathOverlay.tsx  RampEditor.tsx  SpeedLane.tsx  Timeline.tsx  TrackInspector.tsx  TrackPanel.tsx  Transport.tsx  Viewport.tsx
src/export/: download.ts  format.ts  projectFile.ts  rp2040.ts
web/: README.md  check-mpy.ts  gen-firmware.ts  gen-mpy.ts  index.html  package-lock.json  package.json  vite.config.ts
web/app/: index.html
web/privacy/: index.html
web/scripts/: promote-firmware.mjs
web/src/: App.css  App.tsx  bake.ts  color.ts  index.css  persistence.ts  presets.ts  project.ts  store.ts  texture.ts  types.ts
web/src/assets/: led-animator-rp2040.uf2  led-animator-rp2350.uf2
web/src/components/: AboutDialog.tsx  ArrangementDialog.tsx  DisplayPanel.tsx  ExportDialog.tsx  GradientEditor.tsx  GradientFocusView.tsx  GradientPreview.tsx  InfoDot.tsx  Inspector.tsx  KebabMenu.tsx  LedList.tsx  Leds.tsx  PathOverlay.tsx  PrivacyDialog.tsx  ProjectsDialog.tsx  RampEditor.tsx  RangeSelectDialog.tsx  SaveConfirmDialog.tsx  TexturePreview.tsx  Timeline.tsx  TrackInspector.tsx  TrackPanel.tsx  Viewport.tsx  ViewportToolbar.tsx
web/src/export/: backup.ts  combinedUf2.ts  devices.ts  download.ts  firmwareMpy.generated.ts  firmwareRelease.generated.ts  firmwareReleases.generated.json  format.ts  library.ts  littlefs.ts  palette.ts  projectFile.ts  rp2040.ts  uf2.ts
web/src/site/: site.css
