[package]
name = "led-animator-fw"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "LED Animator device firmware — Rust port of the MicroPython player (see ../web/src/export/rp2040.ts)"

# --- MIGRATED 2026-07-12 onto the unified networking graph (docs/PORT.md Phase A/B). ---
# Everything embassy comes from ONE git rev (see [patch] below) so that, as
# networking lands (cyw43 + trouble + embassy-net + embassy-usb), it all resolves
# against the SAME bt-hci / embassy-sync / embedded-io — the graph proven in
# spike-graph/. The player itself only needs the crates below; networking deps are
# added in their own phases (C: usb, D: cyw43).
[dependencies]
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.10", features = ["rp2040", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.5" }
embassy-sync = { version = "0.8" }
embassy-futures = { version = "0.1" }
# USB dev tooling (Phase C): picotool reset interface (→ no BOOTSEL button) + a
# CDC-ACM serial logger (the firmware's first real observability).
embassy-usb = { version = "0.6" }
embassy-usb-logger = { version = "0.6" }
log = "0.4"
# CYW43 radio (Wi-Fi + BT) over PIO SPI (Phase D). Firmware blobs in cyw43-firmware/.
cyw43 = { version = "0.7", features = ["bluetooth"] }
cyw43-pio = { version = "0.10" }
# BLE control channel (Phase E) — trouble-host over the CYW43 HCI. crates.io
# (both agree on bt-hci 0.9 — see spike-graph/STATUS.md).
trouble-host = { version = "0.7", features = ["default-packet-pool-mtu-128"] }
bt-hci = { version = "0.9" }
# Wi-Fi networking (Phase F) — embassy-net (smoltcp) over the CYW43 net driver.
embassy-net = { version = "0.9", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
embedded-io-async = "0.7"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
fixed = "1"
static_cell = "2"
heapless = "0.9" # fixed-capacity String for protocol replies (already in the tree)
# littlefs on the QSPI flash — reads the SAME on-flash fs the web UF2 builds
# (block 4096 × 212 @ 0x1012c000, prog 256). C-backed (littlefs2-sys); cross-built
# for thumbv6m via arm-none-eabi-gcc. See docs/PORT.md §1.
littlefs2 = { version = "0.8", default-features = false }
# littlefs2 → delog (logging) uses core atomic CAS, which thumbv6m (M0+) lacks.
# delog's `portable-atomic` feature routes it to portable-atomic, whose
# `critical-section` feature (enabled above) supplies the CAS polyfill.
delog = { version = "0.1", features = ["portable-atomic"] }
# littlefs's C path parsing (lfs_dir_find) calls strspn/strcspn/strchr — not in
# no_std. littlefs2-sys's `tinyrlibc` feature supplies these; but its feature set
# omits strcpy/strcmp/strncmp (which read_dir / entry-name handling need), so pull
# tinyrlibc directly for those — Cargo feature-unification adds them to the build.
littlefs2-sys = { version = "0.4", features = ["tinyrlibc"] }
tinyrlibc = { version = "0.5", default-features = false, features = ["strcpy", "strcmp", "strncmp"] }
# RP2040 is Cortex-M0+ (thumbv6m): no native atomic CAS. Emulate it via
# critical-section so static_cell / embassy atomics compile.
portable-atomic = { version = "1", features = ["critical-section"] }

# All embassy + cyw43 crates from ONE embassy commit so bt-hci / embassy-sync /
# embedded-io line up as networking lands (proven in spike-graph/ → STATUS.md). On
# this rev (main, 2026-07-12) cyw43 uses bt-hci 0.9 (matches trouble-host 0.7) AND
# embassy-usb is on embedded-io-async 0.7 (the fix that un-broke USB). Bump only in
# lockstep with trouble-host. littlefs2 = our disk-2.1 fork (DISK_VERSION → 2.1).
[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
littlefs2 = { git = "https://github.com/ke4ukz/littlefs2.git", rev = "b008a1e" }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
lto = "fat"
opt-level = "s"
