[package]
name = "led-animator-fw"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "LED Animator device firmware — Rust port of the MicroPython player (see ../web/src/export/rp2040.ts)"

# Single source, N targets (Arduino-style board selection). Exactly ONE platform
# feature is active per build; it selects the embassy-rp chip + memory-<t>.x (via
# build.rs) + the board/ constants. `default = rp2350` so a bare `cargo build`
# targets the Pico 2 W; build others with the aliases in .cargo/config.toml.
[features]
default = ["rp2350", "wifi", "bt"]
rp2040 = ["embassy-rp/rp2040"]
rp2350 = ["embassy-rp/rp235xa"]
# Radios, default on. Omit for a silent, non-broadcasting device (e.g. a fixed
# pattern on a Pico W that shouldn't fill the airwaves): the radio stack then
# isn't compiled at all. `wifi` and `bt` share the CYW43; `bt` adds its HCI.
wifi = ["dep:cyw43", "dep:cyw43-pio", "dep:embassy-net", "dep:embedded-io-async"]
bt = ["dep:cyw43", "cyw43/bluetooth", "dep:cyw43-pio", "dep:trouble-host", "dep:bt-hci"]

# --- MIGRATED 2026-07-12 onto the unified networking graph (docs/PORT.md Phase A/B). ---
# Everything embassy comes from ONE git rev (see [patch] below) so that, as
# networking lands (cyw43 + trouble + embassy-net + embassy-usb), it all resolves
# against the SAME bt-hci / embassy-sync / embedded-io — the graph proven in
# spike-graph/. The player itself only needs the crates below; networking deps are
# added in their own phases (C: usb, D: cyw43).
[dependencies]
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread"] }
# Chip feature (rp2040 / rp235xa) comes from the active platform feature above.
embassy-rp = { version = "0.10", features = ["time-driver", "critical-section-impl"] }
embassy-time = { version = "0.5" }
embassy-sync = { version = "0.8" }
embassy-futures = { version = "0.1" }
# USB dev tooling (Phase C): picotool reset interface (→ no BOOTSEL button) + a
# CDC-ACM serial logger (the firmware's first real observability).
embassy-usb = { version = "0.6" }
embassy-usb-logger = { version = "0.6" }
log = "0.4"
# Radio stack — OPTIONAL, pulled in only by the `wifi` / `bt` features (see
# [features] above). A build with neither omits all of this: no CYW43 bring-up,
# nothing on the airwaves, and the crates aren't compiled or flashed.
# CYW43 radio over PIO SPI (Phase D) — shared by Wi-Fi + BT; `bt` adds the HCI.
cyw43 = { version = "0.7", optional = true }
cyw43-pio = { version = "0.10", optional = true }
# BLE control channel (Phase E) — trouble-host over the CYW43 HCI.
trouble-host = { version = "0.7", features = ["default-packet-pool-mtu-128", "scan"], optional = true }
bt-hci = { version = "0.9", optional = true }
# Wi-Fi networking (Phase F) — embassy-net (smoltcp) over the CYW43 net driver.
embassy-net = { version = "0.9", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"], optional = true }
embedded-io-async = { version = "0.7", optional = true }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
fixed = "1"
static_cell = "2"
heapless = "0.9" # fixed-capacity String for protocol replies (already in the tree)
sha2 = { version = "0.10", default-features = false } # auth PIN challenge-response
# littlefs on the QSPI flash — reads the SAME on-flash fs the web UF2 builds
# (block 4096 × 212 @ 0x1012c000, prog 256). C-backed (littlefs2-sys); cross-built
# for thumbv6m via arm-none-eabi-gcc. See docs/PORT.md §1.
littlefs2 = { version = "0.8", default-features = false }
# littlefs2 → delog (logging) uses core atomic CAS, which thumbv6m (M0+) lacks.
# delog's `portable-atomic` feature routes it to portable-atomic, whose
# `critical-section` feature (enabled above) supplies the CAS polyfill.
delog = { version = "0.1", features = ["portable-atomic"] }
# littlefs's C path parsing (lfs_dir_find) calls strspn/strcspn/strchr — not in
# no_std. littlefs2-sys's `tinyrlibc` feature supplies these; but its feature set
# omits strcpy/strcmp/strncmp (which read_dir / entry-name handling need), so pull
# tinyrlibc directly for those — Cargo feature-unification adds them to the build.
littlefs2-sys = { version = "0.4", features = ["tinyrlibc"] }
tinyrlibc = { version = "0.5", default-features = false, features = ["strcpy", "strcmp", "strncmp"] }
# RP2040 is Cortex-M0+ (thumbv6m): no native atomic CAS. Emulate it via
# critical-section so static_cell / embassy atomics compile.
portable-atomic = { version = "1", features = ["critical-section"] }

# All embassy + cyw43 crates from ONE embassy commit so bt-hci / embassy-sync /
# embedded-io line up as networking lands (proven in spike-graph/ → STATUS.md). On
# this rev (main, 2026-07-12) cyw43 uses bt-hci 0.9 (matches trouble-host 0.7) AND
# embassy-usb is on embedded-io-async 0.7 (the fix that un-broke USB). Bump only in
# lockstep with trouble-host. littlefs2 = our disk-2.1 fork (DISK_VERSION → 2.1).
[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", rev = "9ae6c574e20d6e21ab19f31575adbc4559f3d082" }
littlefs2 = { git = "https://github.com/ke4ukz/littlefs2.git", rev = "b008a1e" }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
lto = "fat"
opt-level = "s"
