[package]
name = "coex-spike"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Throwaway spike: prove CYW43 Wi-Fi + BLE coexistence in Rust (the migration decider)"

# Dependency graph mirrors trouble's own rp-pico-w example, which is the ONLY
# internally-consistent way to combine cyw43 + trouble-host today: the crates.io
# release matrix is skewed (cyw43 0.7.0 pins bt-hci 0.8, trouble-host 0.7.0 pins
# bt-hci 0.9, and the older trouble-host 0.6 pulls an incompatible embassy-sync).
# The fix trouble uses: take trouble-host from git and PATCH cyw43 + every embassy
# crate to a single embassy git rev (below), where cyw43 has already moved to
# bt-hci 0.9 to match trouble main. One rev = one bt-hci, one embassy-sync, one
# embassy-usb — no skew.
[dependencies]
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.10", features = ["rp2040", "time-driver", "critical-section-impl", "unstable-pac"] }
embassy-time = "0.5"
embassy-sync = "0.8"
embassy-futures = "0.1"
cyw43 = { version = "0.7", features = ["bluetooth"] }
cyw43-pio = "0.10"
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", features = ["default-packet-pool-mtu-128"] }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-halt = "1"
static_cell = "2"
portable-atomic = { version = "1", features = ["critical-section"] }
fixed = "1"

# NB: no USB-serial logger here. On the git embassy graph this crate must use
# (see below), embassy-usb doesn't build cleanly, and its Driver trait wouldn't
# match a crates.io embassy-usb anyway. Telemetry for this spike is physical: the
# on-chip LED (Wi-Fi liveness) + a phone BLE scanner (BT liveness). USB-CDC
# logging is a separate observability task for the real port.

# All embassy + cyw43 crates come from one embassy commit (the rev trouble's
# example is tested against) so bt-hci / embassy-sync / embassy-usb versions all
# line up. Bump this rev only in lockstep with trouble-host.
[patch.crates-io]
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", rev = "1d3c3de" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", rev = "1d3c3de" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "1d3c3de" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "1d3c3de" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "1d3c3de" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "1d3c3de" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "1d3c3de" }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
